--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <ul class="sociales">
                 <li><a href="https://twitter.com/dsebao" target="blank" class="tw" title="En twitter"></a></li>
                 <li><a href="http://www.linkedin.com/in/diegosebastianortiz" target="blank" class="ln" title="En linkedin"></a></li>
-                <li><a href="https://github.com/sebaortiz" target="blank" class="gh" title="En github"></a></li>
+                <li><a href="https://github.com/dsebao" target="blank" class="gh" title="En github"></a></li>
                 <li><a href="mailto:&#100;&#115;&#101;&#98;&#97;&#111;&#114;&#116;&#105;&#122;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109;" class="mail" title="V&iacute;a mail"></a></li>
             </ul>
             <div class="clearfix"></div>
