--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width">
-	<title>Sebastian Ortiz | Dise&ntilde;ador &amp; desarrollador web - Comodoro Rivadavia</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width">
+    <title>Sebastian Ortiz | Dise&ntilde;ador &amp; desarrollador web - Comodoro Rivadavia</title>
 
-	<meta property="og:title" content="Sebastian Ortiz | Dise&ntilde;ador &amp; desarrollador web - Comodoro Rivadavia"/>
+    <meta property="og:title" content="Sebastian Ortiz | Dise&ntilde;ador &amp; desarrollador web - Comodoro Rivadavia"/>
     <meta property="og:site_name" content="Sebastian Ortiz" />
     <meta property="og:description" content="Creo experiencias digitales en la web. Comodoro Rivadavia, Patagonia Argentina." />
     <meta property="og:url" content="http://dsebao.github.io"/>
@@ -14,37 +14,47 @@
     <meta property="og:image" content="http://dsebao.github.io/images/fb.png"/>
     <link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
 
-	<!-- Latest compiled and minified CSS -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-	<link rel="stylesheet" href="css/style.css">
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-	<div id="particles-js"></div>
+    <div id="particles-js"></div>
     <div class="fold">
-    	<div class="container">
-    		<div class="row">
-    			<div class="col-md-10 mr-auto mt-5 pt-5">
-    				<h4>SOY SEBASTIAN ORTIZ</h4>
-    				<h1>Diseñador y desarrollador web freelance Patagónico. <br>Me especializo en UI/UX y desarrollos basados en WordPress.</h1>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-10 mr-auto mt-5 pt-5">
+                    <h4>SOY SEBASTIAN ORTIZ</h4>
+                    <h1>Diseñador y desarrollador web freelance Patagónico. <br>Me especializo en UI/UX y desarrollos basados en WordPress.</h1>
 
-    				<div class="contact">
-    					<ul class="social">
-    						<li><a href="https://fb.com/dsebao" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
-    						<li><a href="https://linkedin.com/in/diegosebastianortiz" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
-    						<li><a href="https://twitter.com/dsebao" target="_blank"><i class="fab fa-twitter"></i></a></li>
-    						<li><a href="https://github.com/dsebao" target="_blank"><i class="fab fa-github"></i></a></li>
-    						<li><a href="https://api.whatsapp.com/send?phone=542974295218&text=Hola%20Seba" target="_blank"><i class="fab fa-whatsapp"></i></a></li>
-    						<li><a href="mailto:dsebaortiz@gmail.com" target="_blank"><i class="fa fa-envelope"></i></a></li>
-    					</ul>
-    				</div>
-    			</div>
-    		</div>
-    	</div>
+                    <div class="contact">
+                        <ul class="social">
+                            <li><a href="https://fb.com/dsebao" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
+                            <li><a href="https://linkedin.com/in/diegosebastianortiz" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
+                            <li><a href="https://twitter.com/dsebao" target="_blank"><i class="fab fa-twitter"></i></a></li>
+                            <li><a href="https://github.com/dsebao" target="_blank"><i class="fab fa-github"></i></a></li>
+                            <li><a href="https://api.whatsapp.com/send?phone=542974295218&text=Hola%20Seba" target="_blank"><i class="fab fa-whatsapp"></i></a></li>
+                            <li><a href="mailto:dsebaortiz@gmail.com" target="_blank"><i class="fa fa-envelope"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
-	<footer>
-	</footer>
-	<script src="js/script.js"></script>
+    <footer>
+    </footer>
+    <script src="js/script.js"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-74875713-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-74875713-1');
+    </script>
+
 </body>
 </html>
