--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <div class="contact">
                         <ul class="social">
                             <li><a href="https://dribbble.com/dsebao" target="_blank"><i class="fab fa-dribbble"></i></a></li>
-                            <li><a href="https://linkedin.com/in/diegosebastianortiz" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
+                            <li><a href="https://linkedin.com/in/dsebao" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
                             <li><a href="https://twitter.com/dsebao" target="_blank"><i class="fab fa-twitter"></i></a></li>
                             <li><a href="https://github.com/dsebao" target="_blank"><i class="fab fa-github"></i></a></li>
                             <li><a href="https://api.whatsapp.com/send?phone=542974295218&text=Hola%20Seba" target="_blank"><i class="fab fa-whatsapp"></i></a></li>
