--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <meta property="og:title" content="Sebastian Ortiz | Dise&ntilde;ador &amp; desarrollador web - Comodoro Rivadavia"/>
     <meta property="og:site_name" content="Sebastian Ortiz" />
     <meta property="og:description" content="Creo experiencias digitales en la web. Comodoro Rivadavia, Patagonia Argentina." />
-    <meta property="og:url" content="http://dsebao.github.io"/>
-    <link rel="image_src" href="http://dsebao.github.io/images/fb.png"/>
-    <meta property="og:image" content="http://dsebao.github.io/images/fb.png"/>
+    <meta property="og:url" content="https://sebaortiz.com"/>
+    <link rel="image_src" href="https://sebaortiz.com/images/fb.png"/>
+    <meta property="og:image" content="https://sebaortiz.com/images/fb.png"/>
     <link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
 
     <!-- Latest compiled and minified CSS -->
